src/test/deca/syntax/valid/parser/oracle/void_classes_with_extension_before.deca
class B extends A{}
class A{}
