src/test/deca/syntax/invalid/parser/oracle/method_list_params2.deca
class A { a a (a a, a a, a a, a a, a a, a a, a a, a a, a a, a a,){} }